--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,59 @@
 #main {
     border: 1px solid #d3d3d3;
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     width: 650px;
     height: 650px;
+    display: inline-grid;
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
 }
 
 .miniBox {
-    width: 20%;
-    height: 20%;
+    width: 63px;
+    height: 63px;
+    border: 0.049em solid rgb(214, 214, 214);
+}
+.marker {
+    background-color: tomato;
+    position: absolute;
+    border-radius: 50% 50% 50% 0;
+    border: 4px solid #000;
+    width: 20px;
+    height: 20px;
+    transform: rotate(-45deg);
 }
 
+.marker::after{
+    position: absolute;
+    content: '';
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    margin-left: -5px;
+    margin-top: -5px;
+    background-color: #fff;
+}
+
+.marker2 {
+    background-color: rgb(255, 38, 0);
+    position: absolute;
+    border-radius: 50% 50% 50% 0;
+    border: 4px solid #000;
+    width: 20px;
+    height: 20px;
+    transform: rotate(-45deg);
+}
+
+.marker2::after{
+    position: absolute;
+    content: '';
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    margin-left: -5px;
+    margin-top: -5px;
+    background-color: #fff;
+}
