--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+body {
+    display: inline block;
+}
 #main {
     border: 1px solid #d3d3d3;
     /* background-color: #f1f1f1; */
@@ -11,12 +14,15 @@
     width: 63px;
     height: 63px;
     border: 0.049em solid rgb(214, 214, 214);
+    position: relative;
 }
 .marker {
-    background-color: tomato;
+    background-color: #fff;
     position: absolute;
+    top: 20%;
+    left: 20%;
     border-radius: 50% 50% 50% 0;
-    border: 4px solid #000;
+    border: 3px solid #00cbf3;
     width: 20px;
     height: 20px;
     transform: rotate(-45deg);
@@ -32,14 +38,16 @@
     left: 50%;
     margin-left: -5px;
     margin-top: -5px;
-    background-color: #fff;
+    background-color: #00cbf3;
 }
 
 .marker2 {
-    background-color: rgb(255, 38, 0);
+    background-color: #fff;
     position: absolute;
+    top: 20%;
+    left: 30%;
     border-radius: 50% 50% 50% 0;
-    border: 4px solid #000;
+    border: 3px solid rgb(255, 132, 18);
     width: 20px;
     height: 20px;
     transform: rotate(-45deg);
@@ -55,5 +63,5 @@
     left: 50%;
     margin-left: -5px;
     margin-top: -5px;
-    background-color: #fff;
+    background-color: rgb(255, 132, 18);
 }
