--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,29 +2,30 @@ body {
     width: 100%;
     /* display: inline block; */
     margin: 0;
-    padding: 30px;
+    padding: 3px;
     overflow: hidden;
     display: inline-grid;
     grid-template-columns: 60% 40%;
-    background-image: url(../img/704496.jpg);
+    background-image: url(../img/batik.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #main {
-    border: 1px solid #d3d3d3;
+    border: 2px solid #d3d3d3;
     background-color: #f1f1f1;
     width: 650px;
     height: 650px;
-    margin: auto auto;
+    margin-left: auto;
     top : 0;
     display: inline-grid;
     grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+    opacity: 0.9;
 }
 
 .miniBox {
     width: 63px;
     height: 63px;
-    border: 0.049em solid rgb(214, 214, 214);
+    border: 0.1em solid rgb(214, 214, 214);
     position: relative;
     
 }
@@ -96,19 +97,18 @@ body {
 
 .player {
     background-color: white;
-    opacity: 0.75;
+    opacity: 0.85;
     border: 1px solid black;
+    margin-top: 125px;
     width: 300px;
-    height: auto;
-    display: inline-grid;
+    height: 380px;
+    /* display: inline-grid; */
     top: 0;
     margin-left: 40px;
     border-radius: 30px;
 }
 #titlePlayer{
-    margin-left: auto;
-    margin-right: auto;
-    height: auto;
+    margin-left: 60px
 }
 .player1 {
     border-top: 1px solid black;
@@ -118,7 +118,6 @@ body {
 }
 #titlePlayer1 {
     margin-top: 20px;
-    margin-left: 50px;
     margin-bottom: 30px;
 }
 #placeholderDadu {
@@ -145,5 +144,90 @@ body {
     color: white;
     border: none;
     margin-left: 84px;
+    margin-bottom: 10px;
+}
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    padding-top: 180px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    margin-top: -30px;
+    margin-left: -3px
+  } 
+/* Modal Content */
+.modalContent {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 40px;
+    text-align: center;
+    opacity: 0.95;
+}
+#isiModal{
+    margin-bottom: 40px;
+}
+#buttonStart {
+    background-color: brown;
+    cursor: pointer;
+    padding: 5px 60px;
+    border-radius: 20px;
+    color: white;
+    border: none;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+#ruleStart {
+    background-color: brown;
+    cursor: pointer;
+    padding: 5px 60px;
+    border-radius: 20px;
+    color: white;
+    border: none;
+    margin-left: 50px;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+
+.modalRule {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    padding-top: 180px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    margin-top: -30px;
+    margin-left: -3px
+  } 
+/* Modal Content */
+.modalContentRule {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 40px;
+    text-align: center;
+    opacity: 0.95;
+}
+#backStart {
+    background-color:brown;
+    cursor: pointer;
+    padding: 5px 60px;
+    border-radius: 20px;
+    color: white;
+    border: none;
+    font-size: 20px;
     margin-bottom: 10px;
 }
