--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,8 @@ body {
 #main {
     border: 2px solid #d3d3d3;
     background-color: #f1f1f1;
-    width: 650px;
-    height: 650px;
+    width: 680px;
+    height: 100%;
     margin-left: auto;
     top : 0;
     display: inline-grid;
