--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,22 @@ body {
     position: relative;
     
 }
+.boxContent {
+    text-align: left;
+    margin-right: 3px;
+    font-weight: bold;
+    font-size: 14px;
+}
+.boxType {
+    text-align: center;
+    font-size: 20px;
+}
+.boxLucky {
+    text-align: right;
+    margin-right: 3px;
+    font-weight: bold;
+    font-size: 14px;
+}
 .marker {
     background-color: #fff;
     position: absolute;
@@ -45,15 +61,17 @@ body {
 
 .marker::after{
     position: absolute;
-    content: '';
+    content: '👦';
     width: 10px;
     height: 10px;
     border-radius: 50%;
     top: 50%;
     left: 50%;
-    margin-left: -5px;
-    margin-top: -5px;
-    background-color: #00cbf3;
+    margin-left: -7px;
+    margin-top: -11px;
+    /* background-color: #ffffff; */
+    transform: rotate(+45deg);
+
 }
 
 .marker2 {
@@ -71,13 +89,13 @@ body {
 .marker2::after{
     position: absolute;
     content: '';
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     top: 50%;
     left: 50%;
-    margin-left: -5px;
-    margin-top: -5px;
+    margin-left: -7px;
+    margin-top: -11px;
     background-color: rgb(255, 132, 18);
 }
 
