edit audio by aji

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,9 +117,9 @@ body {
     background-color: white;
     opacity: 0.85;
     border: 1px solid black;
-    margin-top: 125px;
+    margin-top: 60px;
     width: 300px;
-    height: 380px;
+    height: 550px;
     /* display: inline-grid; */
     top: 0;
     margin-left: 40px;
@@ -135,8 +135,17 @@ body {
     margin-right: 10px;
 }
 #titlePlayer1 {
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+.player2 {
+    border-bottom: 1px solid black;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+#titlePlayer2 {
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 #placeholderDadu {
     border: 1px solid gray;
