--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,7 @@ body {
     border-radius: 10px;
     color: white;
     border: none;
+    margin-top: 10px;
     margin-left: 84px;
     margin-bottom: 10px;
 }
@@ -223,7 +224,6 @@ body {
     margin-bottom: 10px;
 }
 
-
 .modalRule {
     display: none;
     position: fixed;
@@ -257,4 +257,54 @@ body {
     border: none;
     font-size: 20px;
     margin-bottom: 10px;
+}
+
+.modalWinner {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    padding-top: 180px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    margin-top: -30px;
+    margin-left: -3px
+  } 
+/* Modal Content */
+.modalContentWinner {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 40px;
+    text-align: center;
+    opacity: 0.95;
+}
+
+.modalGameOver {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    padding-top: 180px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    margin-top: -30px;
+    margin-left: -3px
+  } 
+/* Modal Content */
+.modalContentGameOver {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 40px;
+    text-align: center;
+    opacity: 0.95;
 }
